# hexapod

./: .env.example  .gitignore  command.txt  dockerfile  requirements.txt  robot.urdf  run.bash  run.py  run_simulation.py  run_simulation_ui.py  start_pybullet.py  style.css  view.rviz  visualize_hexapod_stance.py  ws2812b_control.py
hexapod/: config.json  package.xml  setup.cfg  setup.py
hexapod/.ipynb_checkpoints/: hexapod-checkpoint.urdf  robot-checkpoint.urdf
hexapod/hexapod/: joint_slider.py
hexapod/launch/: display.launch.py  gazebo.launch.py  hexapod.launch.py  pybullet.launch.py  rviz.launch.py
hexapod/meshes/: body.part  body.stl  bottom_cover.part  cover.part  cover.stl  fixed_bracket.part  fixed_bracket.stl  hip.part  hip.stl  lower_foot.part  lower_foot.stl  mobile_bracket.part  rubber_foot.part  rubber_foot.stl  servo.part  servo.stl  servo_wheel.part  tie.part  tie.stl  upper_foot.part  upper_foot.stl  weight_beam.part  weight_beam.stl
hexapod/rviz/: view.rviz
hexapod_py/: README.md  requirements.txt  servo.txt
hexapod_py/core/: main.py
hexapod_py/gait/: __init__.py  controller.py
rpoitest/: gps.py  ir_sensor.py  neodriver.py  test_neodriver.py  test_neodriver_white.py  weight.py  ws2812b_control.py
src/hexapod_kinematics/: CMakeLists.txt  package.xml  setup.py
src/hexapod_kinematics/config/: kinematics_params.yaml
src/hexapod_kinematics/hexapod_kinematics/: interactive_ik_publisher.py  kinematics.py  kinematics_engine.py
src/hexapod_kinematics/msg/: LegJoints.msg  LegTarget.msg  MultiLegJoints.msg  MultiLegTargets.msg
(+233 files in other folders)
